--- a/styles.css
+++ b/styles.css
@@ -130,3 +130,167 @@ main{
     font-size: 1.4rem;
     color: #757575;
 }
+.main-tables-container{
+    /* display: flex;
+    width: 70%;
+    margin: 0 auto;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory; */
+}
+.main-currency-table{
+    width: 70%;
+    min-width: 235px;
+    max-width: 500px;
+    height: 360px;
+    margin: 0 auto;
+    font-family: "Inter", sans-serif;
+}
+.main-currency-table .currency-table__title{
+    width: 90%;
+    min-width: 230px;
+    max-width: 300px;
+    margin: 0 auto;
+    margin-bottom: 15px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 2.3rem;
+    color: var(--bitcoin-orange);
+    text-align: start;
+}
+.currency-table__container{
+    width: 90%;
+    min-width: 230px;
+    max-width: 300px;
+    height: 250px;
+    margin: 0 auto;
+}
+.currency-table__container table{
+    width: 100%;
+    height: 100%;
+}
+.currency-table__container td{
+    width: 50%;
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.9rem;
+    color: var(--grey);
+    background-color: var(--just-white);
+}
+.currency-table__container .table--top-left{
+    border-top-left-radius: 15px;
+}
+.currency-table__container .table--bottom-left{
+    border-bottom-left-radius: 15px;
+}
+.currency-table__container .table--top-right{
+    border-top-right-radius: 15px;
+}
+.currency-table__container .table--bottom-right{
+    border-bottom-right-radius: 15px;
+}
+.currency-table__container .table--right{
+    font-weight: normal;
+    font-size: 1.4rem;
+    line-height: 1.7rem;
+    color: #757575;
+}
+.currency-table__container .down{
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-left: 10px;
+    background-image: url('./assets/icons/trending-down.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.currency-table__container .up{
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-left: 10px;
+    background-image: url('./assets/icons/trending-up.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.currency-table__date{
+    width: 190px;
+    height: 30px;
+    margin: 0 auto;
+    margin-top: 15px;
+    padding: 8px;
+    background-color: var(--soft-orange);
+    border-radius: 8px;
+}
+.currency-table__date p{
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    font-weight: 300;
+    color: var(--warm-black);
+}
+.commission-table{
+    width: 70%;
+    min-width: 235px;
+    max-width: 500px;
+    height: 360px;
+    margin: 0 auto;
+    font-family: "Inter", sans-serif;
+}
+.commission__title{
+    width: 90%;
+    text-align: start;
+    font-weight: bold;
+    margin: 0 auto;
+    font-size: 1.8rem;
+    line-height: 2.4rem;
+    color: var(--secondary-blue);
+    font-family: 'DM Sans'
+}
+.commission-table__container{
+    width: 80%;
+    min-width: 230px;
+    max-width: 300px;
+    height: 160px;
+    margin: 0 auto;
+    margin-top: 15px;
+    display: grid;
+    gap: 1px;
+    grid-template: repeat(4, 1fr) / 52% 48%;
+}
+.commission__item{
+    font-weight: normal;
+    line-height: 2rem;
+    font-size: 1.6rem;
+    padding: 10px 12px;
+    text-align: start;
+    background-color: var(--just-white);
+    color: #b5b0ac;
+}
+.commision__item--top-left{
+    border-top-left-radius: 8px;
+}
+.commision__item--top-right{
+    border-top-right-radius: 8px;
+}
+.commision__item--bottom-left{
+    border-bottom-left-radius: 8px;
+}
+.commision__item--bottom-right{
+    border-bottom-right-radius: 8px;
+}
+.commission__price{
+    text-align: center;
+    color: #757575;
+}
+.commission__date{
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 15px;
+    padding: 8px;
+    border-radius: 8px;
+    background-color: var(--soft-blue);
+    font-size: 12px;
+    line-height: 15px;
+    color: var(--warm-black);
+}
