--- a/styles.css
+++ b/styles.css
@@ -131,11 +131,7 @@ main{
     color: #757575;
 }
 .main-tables-container{
-    /* display: flex;
-    width: 70%;
-    margin: 0 auto;
-    overflow-x: scroll;
-    scroll-snap-type: x mandatory; */
+    display: flex;
 }
 .main-currency-table{
     width: 70%;
@@ -293,4 +289,114 @@ main{
     font-size: 12px;
     line-height: 15px;
     color: var(--warm-black);
+}
+.main__product-detail{
+    position: relative;
+    width: 100%;
+    min-width: 320px;
+    height: auto;
+    padding: 20px 10px;
+    background-color: var(--warm-black);
+}
+.main__product-detail .potatoe{
+    position: absolute;
+    top: -10px;
+    left: 50%;
+    transform: translate(-50%);
+    width: 40px;
+    height: 24px;
+    background-image: url('./assets/icons/batata-icon.svg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.product-detail__title{
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 50px;
+    text-align: center;
+}
+.product-detail__title h2{
+    font-weight: bold;
+    font-size: 2.4rem;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}
+.product-detail__title p{
+    margin-top: 20px;
+    font-weight: 500;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+    color: #808080;
+}
+/* .product-cards__container{
+    width: 90%;
+    min-width: 288px;
+    max-width: 400px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 20px;
+} */
+.product-detail__card{
+    width: 90%;
+    min-width: 288px;
+    max-width: 400px;
+    height: 150px;
+    padding: 15px;
+    background-color: var(--black);
+    margin: 15px auto;
+    border-radius: 4px;
+    box-shadow:  0 4px 8px rgba(0,0,0,0.16);
+}
+.product-detail__card .clock{
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background-image: url('./assets/icons/clock.svg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.product-detail__card .eye{
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background-image: url('./assets/icons/eye.svg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.product-detail__card .dollar{
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background-image: url('./assets/icons/dollar.svg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.product-detail__card .check{
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background-image: url('./assets/icons/check-circle.svg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.product-card__title{
+    margin-top: 10px;
+    font-weight: bold;
+    font-size: 1.8rem;
+    line-height: 1.8rem;
+    color: var(--just-white);
+}
+.product-card__body{
+    margin-top: 15px;
+    font-weight: 500;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+    color: #808080;
 }
