--- a/styles.css
+++ b/styles.css
@@ -132,14 +132,20 @@ main{
     color: #757575;
 }
 .main-tables-container{
+    width: 70%;
+    margin: 0 auto;
     display: flex;
+    height: 280px;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
 }
 .main-currency-table{
     width: 70%;
     min-width: 235px;
     max-width: 500px;
-    height: 360px;
-    margin: 0 auto;
+    height: 250px;
+    margin: 0 20px;
     font-family: "Inter", sans-serif;
 }
 .main-currency-table .currency-table__title{
@@ -158,7 +164,7 @@ main{
     width: 90%;
     min-width: 230px;
     max-width: 300px;
-    height: 250px;
+    height: 160px;
     margin: 0 auto;
 }
 .currency-table__container table{
@@ -170,20 +176,21 @@ main{
     font-size: 1.6rem;
     font-weight: 500;
     line-height: 1.9rem;
+    padding: 10px 12px;
     color: var(--grey);
     background-color: var(--just-white);
 }
 .currency-table__container .table--top-left{
-    border-top-left-radius: 15px;
+    border-top-left-radius: 8px;
 }
 .currency-table__container .table--bottom-left{
-    border-bottom-left-radius: 15px;
+    border-bottom-left-radius: 8px;
 }
 .currency-table__container .table--top-right{
-    border-top-right-radius: 15px;
+    border-top-right-radius: 8px;
 }
 .currency-table__container .table--bottom-right{
-    border-bottom-right-radius: 15px;
+    border-bottom-right-radius: 8px;
 }
 .currency-table__container .table--right{
     font-weight: normal;
@@ -213,7 +220,7 @@ main{
 }
 .currency-table__date{
     width: 190px;
-    height: 30px;
+    /* height: 30px; */
     margin: 0 auto;
     margin-top: 15px;
     padding: 8px;
@@ -230,19 +237,21 @@ main{
     width: 70%;
     min-width: 235px;
     max-width: 500px;
-    height: 360px;
+    height: 250px;
     margin: 0 auto;
     font-family: "Inter", sans-serif;
 }
 .commission__title{
     width: 90%;
-    text-align: start;
-    font-weight: bold;
+    min-width: 230px;
+    max-width: 300px;
     margin: 0 auto;
+    margin-bottom: 15px;
     font-size: 1.8rem;
-    line-height: 2.4rem;
+    font-weight: bold;
+    line-height: 2.3rem;
     color: var(--secondary-blue);
-    font-family: 'DM Sans'
+    text-align: start;
 }
 .commission-table__container{
     width: 80%;
@@ -281,7 +290,7 @@ main{
     color: #757575;
 }
 .commission__date{
-    width: 70%;
+    width: 190px;
     margin: 0 auto;
     margin-top: 15px;
     padding: 8px;
