--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ main{
     min-width: 235px;
     max-width: 500px;
     height: 250px;
-    margin: 0 20px;
+    margin: 0 auto;
     font-family: "Inter", sans-serif;
 }
 .main-currency-table .currency-table__title{
